--- a/hotel/src/main/resources/application-prodMysqlLocal.properties
+++ b/hotel/src/main/resources/application-prodMysqlLocal.properties
@@ -2,6 +2,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/cubidesc3
 spring.datasource.username=root
 spring.datasource.password=Q123456
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-server.port=80
+server.port=8080
